--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mysql": "^2.17.1",
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
+    "turtlecoin-rpc": "git+https://git@github.com/turtlecoin/turtlecoin-rpc-js.git",
     "turtlecoin-wallet-backend": "git+https://git@github.com/turtlecoin/turtlecoin-wallet-backend-js.git"
   }
 }
